# satellite-terrestrial-task-offloading-maddpg

./: .gitignore  README.md  config.py  evaluate.py  plot_results.py  pyproject.toml  render_animation.py  train_dqn.py  train_maddpg.py  visualize_rollout.py
algorithms/: __init__.py  baselines.py
algorithms/dqn/: __init__.py  dqn_agent.py  dqn_network.py  replay_buffer.py
algorithms/maddpg/: __init__.py  agent.py  maddpg.py  networks.py  replay_buffer.py
envs/: __init__.py  offloading_env.py
tests/: test_baselines.py  test_calibration.py  test_checkpoint_loading.py  test_dqn_training.py  test_env.py  test_evaluate_metrics.py  test_maddpg_training.py  test_plot_results.py  test_shapes.py  test_visualization_trace.py
utils/: logger.py
visualization/: __init__.py  trace.py
visualizer/: app.js  index.html  styles.css
