[project]
name = "satellite-terrestrial-task-offloading-maddpg"
version = "0.1.0"
description = "MADDPG simulation for satellite-terrestrial collaborative task offloading."
requires-python = ">=3.10,<3.14"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "pytest>=8.0",
    "torch>=2.3",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
